Fixed all but 2 TODOs (i.e. large icon shifting, navbar delayed appearance, navicon placement, manual margin) on main page.

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -8,6 +8,12 @@
   margin-top: 20px;
 }
 
+#navicon {
+    left:80%;   /* width of #content */
+    top: 0;
+    position: absolute;
+}
+
 .sansserif {
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -33,10 +39,18 @@
 }
 
 .navbottom {
+    position: fixed;
+    padding-left: 1.5%;
+    bottom: 10%;
+    display: flex;
+    justify-content: center;
+}
+
+.navsocials {
+    position: relative;
     width: 100px;
     height: auto;
-    padding-left: 10%;
-    margin-top: 120%; /* TODO: Re-check */
+    padding-left: 5%;
     float: left;
 }
 
@@ -103,9 +117,4 @@ img.center {
   max-width:100%;
   max-height:100%;
   padding: 5px;
-}
-
-img.navicon {
-    left:80%;   /* width of #content */
-    position: absolute;
 }
